--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,18 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".app.MainActivity">
 
     <EditText
         android:id="@+id/txtName"
         android:layout_width="259dp"
         android:layout_height="46dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="52dp"
         android:ems="10"
         android:hint="your name"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="@+id/btnAddImg"
-        app:layout_constraintHorizontal_bias="0.45"
+        app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="@+id/btnAddImg"
         app:layout_constraintTop_toBottomOf="@+id/btnAddImg" />
 
@@ -23,7 +23,7 @@
         android:id="@+id/txtemail"
         android:layout_width="259dp"
         android:layout_height="46dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="your email"
         android:inputType="textPersonName"
@@ -49,12 +49,12 @@
         android:id="@+id/txtDC"
         android:layout_width="259dp"
         android:layout_height="46dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="4dp"
         android:ems="10"
         android:hint="your adress"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="@+id/txtsdt"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/txtsdt"
         app:layout_constraintTop_toBottomOf="@+id/txtsdt" />
 
@@ -62,37 +62,22 @@
         android:id="@+id/btnAdd"
         android:layout_width="260dp"
         android:layout_height="59dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="20dp"
         android:backgroundTint="#CD0A0A"
         android:text="ADD"
         android:textSize="24sp"
         android:textStyle="bold"
         app:cornerRadius="45px"
         app:layout_constraintEnd_toEndOf="@+id/txtPass"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/txtPass"
         app:layout_constraintTop_toBottomOf="@+id/txtPass" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="325dp"
-        android:layout_height="39dp"
-        android:layout_marginTop="20dp"
-        android:text="Your data  will upload for firebase"
-        android:textAlignment="textStart"
-        android:textColor="@color/design_default_color_error"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/btnAdd"
-        app:layout_constraintHorizontal_bias="0.353"
-        app:layout_constraintStart_toStartOf="@+id/btnAdd"
-        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />
 
     <EditText
         android:id="@+id/txtPass"
         android:layout_width="259dp"
         android:layout_height="46dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Your  password"
         android:inputType="textPassword"
@@ -130,14 +115,13 @@
     <ProgressBar
         android:id="@+id/progressBar2"
         style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_width="100dp"
+        android:layout_height="74dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/textView2"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.515" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
