--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -2,46 +2,71 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="412dp"
+    android:layout_height="230dp"
+    android:id="@+id/itemLayout">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="410dp"
-        android:layout_height="131dp"
-        android:layout_marginTop="58dp"
+        android:layout_width="412dp"
+        android:layout_height="180dp"
         android:layout_marginEnd="3dp"
-        android:layout_marginBottom="414dp"
         android:background="#DF1313"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteY="36dp" />
 
     <TextView
         android:id="@+id/tv_Name"
-        android:layout_width="218dp"
-        android:layout_height="34dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="182dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="16dp"
         android:text="TextView"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintHorizontal_bias="0.159"
+        app:layout_constraintStart_toEndOf="@+id/image_veiw"
+        app:layout_constraintTop_toTopOf="@+id/image_veiw" />
 
     <TextView
         android:id="@+id/tv_Email"
-        android:layout_width="225dp"
-        android:layout_height="29dp"
+        android:layout_width="184dp"
+        android:layout_height="48dp"
         android:text="TextView"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/image_veiw"
         app:layout_constraintEnd_toEndOf="@+id/tv_Name"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/tv_Name"
-        app:layout_constraintTop_toBottomOf="@+id/tv_Name" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_Name"
+        app:layout_constraintVertical_bias="0.232" />
+
+    <ImageView
+        android:id="@+id/image_veiw"
+        android:layout_width="133dp"
+        android:layout_height="151dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.365"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <Button
+        android:id="@+id/btnAdd_user"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:text="Add"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/tv_Email"
+        app:layout_constraintTop_toBottomOf="@+id/tv_Email"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
